# aoc2021

./: pyproject.toml
src/aoc2021/: __init__.py  d1.py  d10.py  d11.py  d12.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8 copy.py  d8.py  d9.py
tests/: test_d1.py  test_d10.py  test_d12.py  test_d2.py  test_d3.py  test_d4.py  test_d6.py  test_d8.py  test_d9.py
