[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["fbattello <fabien.battello@orange.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^7.30.0"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
